[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Menu/Settings.gd" type="Script" id=2]
[ext_resource path="res://Menu/Audio Settings.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/Key Bindings.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/Video Settings.tscn" type="PackedScene" id=5]

[node name="Settings" type="Popup"]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 500, 500 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -205.0
margin_right = 250.0
margin_bottom = 175.0
color = Color( 0.164706, 0.0431373, 0.286275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -180.0
margin_right = 240.0
margin_bottom = 180.0
color = Color( 0.494118, 0.345098, 0.643137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -185.0
margin_right = 240.0
margin_bottom = 195.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 30.0
text = "Settings"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 480.0
margin_bottom = 110.0

[node name="VideoButton" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 27.0
margin_right = 452.0
margin_bottom = 70.0
text = "Video Settings"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 480.0
margin_bottom = 190.0

[node name="Audio Button" type="Button" parent="VBoxContainer/CenterContainer2"]
margin_left = 26.0
margin_right = 453.0
margin_bottom = 70.0
text = "Audio Settings"

[node name="CenterContainer4" type="CenterContainer" parent="VBoxContainer"]
margin_top = 200.0
margin_right = 480.0
margin_bottom = 270.0

[node name="KeyButton" type="Button" parent="VBoxContainer/CenterContainer4"]
margin_left = 48.0
margin_right = 432.0
margin_bottom = 70.0
text = "Key Bindings"

[node name="CenterContainer5" type="CenterContainer" parent="VBoxContainer"]
margin_top = 280.0
margin_right = 480.0
margin_bottom = 350.0

[node name="BackButton" type="Button" parent="VBoxContainer/CenterContainer5"]
margin_left = 144.0
margin_right = 336.0
margin_bottom = 70.0
text = "Back"

[node name="AudioSettings" parent="." instance=ExtResource( 3 )]

[node name="KeyBindings" parent="." instance=ExtResource( 4 )]

[node name="VideoSettings" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="pressed" from="VBoxContainer/CenterContainer/VideoButton" to="." method="_on_VideoButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/Audio Button" to="." method="_on_Audio_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer4/KeyButton" to="." method="_on_KeyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer5/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="click" from="AudioSettings" to="." method="_on_AudioSettings_click"]
[connection signal="click" from="KeyBindings" to="." method="_on_KeyBindings_click"]
[connection signal="click" from="VideoSettings" to="." method="_on_VideoSettings_click"]
